--- a/Task2/inventory.yaml
+++ b/Task2/inventory.yaml
@@ -1,8 +1,5 @@
 ---
-docker:
+all:
   hosts:
-    docker01:
-      ansible_host: 10.0.2.15
-      ansible_user: "ubuntu"
-      ansible_become: true
-      ansible_become_method: sudo
+    localhost:
+      ansible_connection: local
