--- a/Task2/group_vars/all.yaml
+++ b/Task2/group_vars/all.yaml
@@ -1,4 +1,3 @@
----
 docker_apt_release_channel: "stable"
 docker_apt_repository: "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
 docker_daemon_options:
@@ -13,10 +12,10 @@ docker_packages:
 # Private registry settings
 private_registry: "docker.io"
 registry_user: "wonka1124"
-registry_password: ""
+registry_password: "Qaszplkm1"
 
 # Web application settings
-webapp_image: "testpy"
+webapp_image: "wonka1124/testpy"
 webapp_tag: "latest"
 container_ports:
   - 8001
